Add: distribution of components, add styles for individual componentsadded styles for individual components

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,5 +1,5 @@
 /* Header */
-header {
+/* header {
   padding: 1rem 0 1rem 0;
   height: 5rem;
   background-color: #301a1a;
@@ -97,10 +97,10 @@ nav a:hover {
     padding-top: 4rem;
     text-align: center;
   }  
-}
+} */
 
 /* Footer */
-footer {
+/* footer {
   padding: 2rem 0;
   background-color: #301a1a;
 }
@@ -110,10 +110,10 @@ footer {
   margin: 0 auto;
   font-size: small;
   text-align: center;
-}
+} */
 
 /* Banner */
-.banner {
+/* .banner {
   padding-top: 0;
   background-image: url("./img/beans.jpg");
   background-size: cover;
@@ -142,10 +142,10 @@ footer {
     padding-top: 4rem;
     text-align: center;
   }
-}
+} */
 
 /* Menu */
-.menu-intro {
+/* .menu-intro {
   max-width: 20rem;
   margin: 0 auto 0 auto;
   text-align: center;
@@ -153,7 +153,7 @@ footer {
 
 .drinks-list {
   display: grid;
-  grid-template-columns: repeat( auto-fit, minmax(20rem, 1fr) );
+  grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
   justify-content: center;
   justify-items: center;
   grid-gap: 1rem;
@@ -169,9 +169,9 @@ footer {
   border-radius: 5px;
   box-shadow: 0 0 3px #444;
 }
-
+ */
 /* Menu - Drink */
-.drink {
+/* .drink {
   width: 20rem;
 }
 
@@ -225,9 +225,9 @@ footer {
 .order-btn:active {
   background-color: #e67e51;
 }
-
+ */
 /* Drink - Layer */
-.layer {
+/* .layer {
   display: flex;
   padding: 0.25rem;
 }
@@ -244,10 +244,10 @@ footer {
 .layer__label {
   height: 1rem;
   line-height: 1rem;
-}
+} */
 
 /* Gallery */
-.gallery {
+/* .gallery {
   min-height: 100vh;
   color: white;
   background-image: url("./img/gallery.jpg");
@@ -280,10 +280,10 @@ footer {
     flex-direction: row;
     gap: 2rem;
   }
-}
+} */
 
 /* Contact */
-.contact {
+/* .contact {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -307,3 +307,4 @@ footer {
   width: 100%;
   height: auto;
 }
+ */
